<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSSAPP</string>
    <string name="feed_fragment_title">Feed</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="manager_fragment_title">Manager</string>
    <string name="feed_name">Feed</string>
    <string name="manager_name">Manager</string>
    <string name="profile_name">Profile</string>
    <string name="feed_rss_name">News</string>
    <string name="save_button">Save RSS</string>
    <string name="cancel_button">Cancel</string>
    <string name="bottom_sheet_name_field_hint">Rss Name</string>
    <string name="bottom_sheet_url_field_hint">Rss Url</string>
    <string name="manager_textview_text">Manager</string>
    <string name="feed_textview_text">Feed</string>
    <string name="profile_textview_text">Profile</string>
    <string name="success_saving">success saving rss</string>
    <string name="error_saving">error saving rss</string>
    <string name="deleted">Rss deleted</string>
</resources>