<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_rss_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/bottom_sheet_padding"
    app:layout_behavior="com.google.android.material.bottom-sheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_sheet_items"
        android:autofillHints="Rss Name"
        android:hint="@string/bottom_sheet_name_field_hint"
        android:textSize="@dimen/form_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_sheet_items"
        android:autofillHints="Rss Url"
        android:hint="@string/bottom_sheet_url_field_hint"
        android:textSize="@dimen/form_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_sheet_items"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="260dp"
        android:text="@string/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_url" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_sheet_items"
        android:layout_marginStart="260dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_url" />

</androidx.constraintlayout.widget.ConstraintLayout>